--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/slide-1.JPG" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide-2.jpg" alt="">
