--- a/overmij.html
+++ b/overmij.html
@@ -130,7 +130,7 @@
                     <ul class="pager">
                         <li class="previous"><a href="beroep.html">&larr; Vorige pagina</a>
                         </li>
-                        <li class="next"><a href="nieuws.html">Volgende pagina &rarr;</a>
+                        <li class="next"><a href="Nieuws.html">Volgende pagina &rarr;</a>
                         </li>
                     </ul>
                 </div>
