--- a/nieuws.html
+++ b/nieuws.html
@@ -65,7 +65,7 @@
                         <a href="beroep.html">Beroep</a>
                     </li>
 					<li>
-                        <a href="Nieuws.html">Nieuws</a>
+                        <a href="nieuws.html">Nieuws</a>
                     </li>
                 </ul>
             </div>
@@ -134,7 +134,7 @@
    </div>
    
 					<div class="col-md-6">
-					<img width="46%" src="img/swatch3.gif" alt="">
+					<img width="46,5%" src="img/swatch3.gif" alt="">
 					</div>
 				
 			
