--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a href="beroep.html">Beroep</a>
                     </li>
 					<li>
-                        <a href="Nieuws.html">Nieuws</a>
+                        <a href="nieuws.html">Nieuws</a>
                     </li>
                 </ul>
             </div>
