--- a/overmij.html
+++ b/overmij.html
@@ -65,7 +65,7 @@
                         <a href="beroep.html">Beroep</a>
                     </li>
 					<li>
-                        <a href="Nieuws.html">Nieuws</a>
+                        <a href="nieuws.html">Nieuws</a>
                     </li>
                 </ul>
             </div>
@@ -130,7 +130,7 @@
                     <ul class="pager">
                         <li class="previous"><a href="beroep.html">&larr; Vorige pagina</a>
                         </li>
-                        <li class="next"><a href="Nieuws.html">Volgende pagina &rarr;</a>
+                        <li class="next"><a href="nieuws.html">Volgende pagina &rarr;</a>
                         </li>
                     </ul>
                 </div>
