--- a/nieuws.html
+++ b/nieuws.html
@@ -86,7 +86,7 @@
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img width="100%" src="img/watch.jpg" alt="">
+                    <img width="540" height="409" src="img/disc2.jpg" alt="">
 					<img width="100%" src="img/swatch2.gif" alt="">
                 </div>
 				
