--- a/beroep.html
+++ b/beroep.html
@@ -85,7 +85,7 @@
                     </h2>
 					<p>Waarom ik tot netwerkbeheerder opgeleid wil worden komt omdat ik nog niet al te veel wist van servers en daar graag meer over te weten zou willen komen.</p>
 					<img width="100%" src="img/server.jpg">
-					<h2>Wat moet een netwerkbeheerder kunnen?</h2>
+					<h2>Wat is een netwerk?</h2>
 					<p>Een netwerk is een aantal computers en andere apparatuur (zoals printers, routers, telefoons) die op elkaar zijn aangesloten. Via dat netwerk kunnen mensen informatie uitwisselen.
 
 Jij zorgt voor het ontwerpen, het opzetten, het beheer, het onderhoud en de beveiliging van een netwerk. Dat is meestal een klein tot middelgroot netwerk. Het netwerk wordt elke dag door iedereen gebruikt. Mensen maken documenten die voor iedereen te zien moeten zijn. Ze mailen en gebruiken internet. Als het netwerk uitvalt, kunnen er grote problemen ontstaan. Jij lost die problemen op. Je verdiept je in de nieuwste technieken en producten. Je weet precies welke producten goed zijn en welke niet. Je doet er alles aan om het netwerk zo goed en veilig mogelijk te laten werken. En het zo goed mogelijk te houden.</p>
