--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                         <strong>Voorstellen</strong>
                     </h2>
                     <hr>
-                    <font size="6">Hoi, Ik ben Bjorn Stevens en ik ben 15 jaar oud en dit is mijn portfolio gemaakt door middel van HTML(code).</font>
-					<font size="6">Ik volg de opleding ICT-Beheerder Niveau 4 op het Da Vinci College in Gorinchem.</font>
-					<font size="6">Mijn hobby's zijn voetballen, met computeronderdelen werken en Muziek luisteren.</font>
+                    <font size="5">Hoi, Ik ben Bjorn Stevens en ik ben 15 jaar oud en dit is mijn portfolio gemaakt door middel van HTML(code).</font>
+					<font size="5">Ik volg de opleding ICT-Beheerder Niveau 4 op het Da Vinci College in Gorinchem.</font>
+					<font size="5">Mijn hobby's zijn voetballen, met computeronderdelen werken en Muziek luisteren. Ook heb ik 1 lievelingsauto: de Porsche 911 GT3RS (zit ook in de video).</font>
                 </div>
             </div>
         </div>
