--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright Bjorn INC. &copy;</p>
+                    <p>Copyright Bjorn 2016 &copy;</p>
                 </div>
             </div>
         </div>
