--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                         <a href="beroep.html">Beroep</a>
                     </li>
 					<li>
+                        <a href="opdrachten.html">Opdrachten</a>
+                    </li>
+					<li>
                         <a href="nieuws.html">Nieuws</a>
                     </li>
                 </ul>
